add reset tree button

--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -23,15 +23,15 @@
     <li><del>make gates dynamic</del></li>
     <li><del>add gates to js</del></li>
     <li><del>prevent removing points if gates depend on them</del></li>
-    <li>tree reset button</li>
+    <li><del>tree reset button</del></li>
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
     <li>availability indicator (white)</li>
     <li>dynamic connector-color around gates</li>
     <li>more tree data / icons</li>
     <li>tree import (build your own tree)</li>
-    <li>export path</li>
-    <li>import path</li>
+    <li><del>export path</del></li>
+    <li><del>import path</del></li>
 </ul>
 
 <h2>Class tree: Balance Druid</h2>
