--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -27,7 +27,7 @@
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
     <li>availability indicator (white)</li>
-    <li>dynamic connector-color around gates</li>
+    <li><del>dynamic connector-color around gates</del></li>
     <li>more tree data / icons</li>
     <li>tree import (build your own tree)</li>
     <li><del>export path</del></li>
