--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -26,7 +26,7 @@
     <li><del>tree reset button</del></li>
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
-    <li>availability indicator (white)</li>
+    <li><del>availability indicator (white)</del></li>
     <li><del>dynamic connector-color around gates</del></li>
     <li>more tree data / icons</li>
     <li>tree import (build your own tree)</li>
