turquoise is pretty

--- a/general_website/static/general_website/css/talent_trees.css
+++ b/general_website/static/general_website/css/talent_trees.css
@@ -10,7 +10,7 @@
 
     /* talent selection colour */
     --btt-not-selected: darkgrey;
-    --btt-selectable: lightgrey;
+    --btt-selectable: turquoise;
     --btt-partially-selected: yellow;
     --btt-fully-selected: orange;
 }
