--- a/general_website/static/general_website/css/talent_trees.css
+++ b/general_website/static/general_website/css/talent_trees.css
@@ -19,10 +19,16 @@ div.btt-container {
     width: 100%;
     text-align: center;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: repeat(auto-fit, minmax(calc(var(--btt-talent-columns) * calc(var(--btt-box-size) / 3 * 2) + calc(var(--btt-talent-columns) - 1) * calc(var(--btt-box-size) / 5)), 1fr));
 }
 
+
 div.bloodmallets-talent-tree {
+    width: 100%;
+    text-align: center;
+}
+
+div.bloodmallet-talents {
     width: calc(var(--btt-talent-columns) * calc(var(--btt-box-size) / 3 * 2) + calc(var(--btt-talent-columns) - 1) * calc(var(--btt-box-size) / 5));
     margin-left: auto;
     margin-right: auto;
@@ -36,7 +42,7 @@ div.bloodmallets-talent-tree {
     column-gap: calc(var(--btt-box-size) / 5);
 }
 
-div.bloodmallets-talent-tree>div.btt-talent {
+div.bloodmallet-talents>div.btt-talent {
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
