--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -8,30 +8,17 @@
 <h1 class="display-4 mb-3 text-center" id="primary_headline">{% translate "Talent trees" %}</h1>
 
 <div class="alert alert-warning" role="alert">
-    This website is under heavy development. Nevertheless please create <a
-        href="https://github.com/Bloodmallet/bloodmallet_web_frontend/issues">issues on github</a> for feature requests
-    and feedback.
+    Wrong or missing icon? <a href="https://github.com/Bloodmallet/bloodmallet_web_frontend/issues">Report it!</a>
 </div>
 
 <p>
     TODO:
 </p>
 <ul>
-    <li><del>tooltips</del></li>
-    <li><del>visualize gates</del></li>
-    <li><del>clean up gates css</del></li>
-    <li><del>make gates dynamic</del></li>
-    <li><del>add gates to js</del></li>
-    <li><del>prevent removing points if gates depend on them</del></li>
-    <li><del>tree reset button</del></li>
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
-    <li><del>availability indicator (white)</del></li>
-    <li><del>dynamic connector-color around gates</del></li>
     <li>more tree data / icons</li>
     <li>tree import (build your own tree)</li>
-    <li><del>export path</del></li>
-    <li><del>import path</del></li>
 </ul>
 
 <h2>Balance Druid</h2>
@@ -42,6 +29,13 @@
     </div>
 </div>
 
+<h2>Holy Priest</h2>
+<div class="btt-container mb-5">
+    <div class="bloodmallets-talent-tree mb-5" data-wow-class="priest" data-wow-spec="holy" data-tree-type="class">
+    </div>
+    <div class="bloodmallets-talent-tree mb-5" data-wow-class="priest" data-wow-spec="holy" data-tree-type="spec">
+    </div>
+</div>
 
 <h3 class="mt-5">Data example</h3>
 <code>
