--- a/general_website/static/general_website/css/talent_trees.css
+++ b/general_website/static/general_website/css/talent_trees.css
@@ -55,10 +55,12 @@ div.bloodmallet-talents>div.btt-talent {
 div.btt-talent>div.btt-talent-rank {
     position: absolute;
     width: 100%;
-    bottom: 0px;
+    bottom: -4px;
     left: 0px;
     /* right: 0px; */
     text-align: center;
+    height: 1.1rem;
+    line-height: 1.1rem;
     /* offset-x | offset-y | blur-radius | color */
 }
 
@@ -86,21 +88,21 @@ div.btt-talent>div.btt-talent-rank {
     stroke: var(--btt-fully-selected);
 }
 
-.btt-selectable>.btt-icon {
+.btt-selectable .btt-icon {
     background-color: var(--btt-selectable);
     /* filter: grayscale(100%); */
 }
 
-.btt-not-selected>.btt-icon {
+.btt-not-selected .btt-icon {
     background-color: var(--btt-not-selected);
     filter: grayscale(100%);
 }
 
-.btt-partially-selected>.btt-icon {
+.btt-partially-selected .btt-icon {
     background-color: var(--btt-partially-selected);
 }
 
-.btt-fully-selected>.btt-icon {
+.btt-fully-selected .btt-icon {
     background-color: var(--btt-fully-selected);
 }
 
@@ -229,4 +231,27 @@ div.btt-talent>div.btt-talent-rank {
     justify-content: center;
     align-content: center;
     flex-direction: column;
+}
+
+/* --------------- */
+/* Styling tooltip */
+/* --------------- */
+
+.wowhead-tooltip .wowhead-tooltip-requirements {
+    display: none;
+}
+
+/* remove icon left to the tooltip */
+.whtt-tooltip-icon {
+    display: none;
+}
+
+.wowhead-tooltip td,
+.wowhead-tooltip th {
+    background: none;
+}
+
+.wowhead-tooltip {
+    background: #232227;
+    border: 1px solid #999999 !important;
 }
