--- a/general_website/static/general_website/css/talent_trees.css
+++ b/general_website/static/general_website/css/talent_trees.css
@@ -174,6 +174,51 @@ div.btt-talent>div.btt-talent-rank {
     clip-path: polygon(50% 0%, 71% 0%, 100% 29%, 100% 71%, 71% 100%, 50% 100%, 50% 0%);
 }
 
+.btt-choice-visual-left::before,
+.btt-choice-visual-right::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 50%;
+    border-top: calc(var(--btt-icon-size) / 5) solid transparent;
+    border-bottom: calc(var(--btt-icon-size) / 5) solid transparent;
+    z-index: inherit;
+
+}
+
+.btt-choice-visual-left::before {
+    left: 0px;
+    transform: translate(-33%, -50%);
+    border-right: calc(var(--btt-icon-size) / 3) solid var(--btt-partially-selected);
+}
+
+.btt-choice-visual-right::after {
+    right: 0px;
+    transform: translate(33%, -50%);
+    border-left: calc(var(--btt-icon-size) / 3) solid var(--btt-partially-selected);
+}
+
+.btt-not-selected.btt-choice-visual-left::before,
+.btt-not-selected.btt-choice-visual-right::after {
+    border-left-color: var(--btt-not-selected);
+    border-right-color: var(--btt-not-selected);
+}
+
+.btt-partially-selected::before,
+.btt-partially-selected::after,
+.btt-selectable::before,
+.btt-selectable::after {
+    border-left-color: var(--btt-selectable);
+    border-right-color: var(--btt-selectable);
+}
+
+.btt-fully-selected::before,
+.btt-fully-selected::after {
+    border-left-color: var(--btt-fully-selected);
+    border-right-color: var(--btt-fully-selected);
+}
+
 .btt-talent-name {
     color: var(--btt-fully-selected);
     font-weight: 700;
