--- a/general_website/static/general_website/css/bm-charts.css
+++ b/general_website/static/general_website/css/bm-charts.css
@@ -49,8 +49,11 @@
     text-shadow: 1px 0 1px #000, 0 1px 1px #000;
 }
 
+
 .bm-key-title,
-.bm-bar-title {
+.bm-bar-title,
+.bm-tooltip-key-title,
+.bm-tooltip-value-title {
     color: #999999;
     text-align: center;
     font-size: 90%;
@@ -66,27 +69,22 @@
 
 .bm-width-marker-top {
     position: relative;
-    border-bottom: 1px solid #999999;
     padding-bottom: 5px;
     margin-bottom: 7px;
 }
 
-.bm-width-marker-top:after,
 .bm-width-marker-top:before {
     content: '';
     position: absolute;
+    left: 50%;
     bottom: 0px;
-    height: 33%;
-    transform: translateY(100%);
+    height: 8px;
+    width: calc(100% + 8px);
+    transform: translate(-50%, 100%);
     border-left: 1px solid #999999;
-}
-
-.bm-width-marker-top:after {
-    right: 0px;
-}
-
-.bm-width-marker-top:before {
-    left: 0px;
+    border-right: 1px solid #999999;
+    border-top: 1px solid #999999;
+    border-radius: 5px 5px 0 0;
 }
 
 .bm-width-marker-bottom {
@@ -193,4 +191,114 @@
 
 .bm-bar-group-10 {
     background-color: #91e8e1;
+}
+
+
+.bm-tooltip-container {
+    display: grid;
+    grid-template-columns: auto;
+    row-gap: 0.1rem;
+    padding: 10px;
+}
+
+.bm-tooltip-title {
+    font-size: 120%;
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.bm-tooltip-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "key value";
+    column-gap: 15px;
+}
+
+.bm-tooltip-key-title {
+    grid-area: key;
+}
+
+.bm-tooltip-value-title {
+    grid-area: value;
+}
+
+.bm-tooltip-key,
+.bm-tooltip-value {
+    text-align: center;
+}
+
+.bm-tooltip-key {
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 5px;
+    display: inline-block;
+    border: 1px solid #fff;
+    text-shadow: 1px 0 1px #000, 0 1px 1px #000;
+}
+
+.bm-tooltip-width-marker-bottom {
+    position: relative;
+    padding-bottom: 5px;
+    margin-bottom: 7px;
+}
+
+.bm-tooltip-width-marker-bottom:after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+    height: 8px;
+    width: calc(100% + 8px);
+    transform: translate(-50%, 100%);
+    border-left: 1px solid #999999;
+    border-right: 1px solid #999999;
+    border-top: 1px solid #999999;
+    border-radius: 5px 5px 0 0;
+}
+
+.bm-tooltip-width-marker-top {
+    position: relative;
+    padding-top: 5px;
+    margin-top: 7px;
+}
+
+.bm-tooltip-width-marker-top:after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    top: 0px;
+    height: 8px;
+    width: calc(100% + 8px);
+    transform: translate(-50%, -100%);
+    border-left: 1px solid #999999;
+    border-right: 1px solid #999999;
+    border-bottom: 1px solid #999999;
+    border-radius: 0 0 5px 5px;
+}
+
+.bm-tooltip-unit {
+    font-size: 80%;
+    color: var(--nice);
+}
+
+/* Overrides bootstrap */
+.tooltip.show {
+    opacity: 1.0;
+}
+
+.tooltip-inner {
+    background-color: #232227;
+    border: 1px solid #999999;
+    border: 1px solid #fff;
+    border-radius: 5px;
+}
+
+.bs-tooltip-left .arrow::before,
+.bs-tooltip-auto[x-placement^="left"] .arrow::before {
+    border-left-color: #232227;
+    border-left-color: #999999;
+    border-left-color: #fff;
 }
