--- a/general_website/static/general_website/css/bm-charts.css
+++ b/general_website/static/general_website/css/bm-charts.css
@@ -65,6 +65,26 @@
 
 .bm-bar-title {
     grid-area: bar;
+    border-bottom: 1px solid #999999;
+    position: relative;
+}
+
+.bm-bar-min {
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    transform: translate(-25%, 50%);
+    background-color: #343a40;
+    padding-right: 5px;
+}
+
+.bm-bar-max {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    transform: translate(25%, 50%);
+    background-color: #343a40;
+    padding-left: 5px;
 }
 
 .bm-width-marker-top {
@@ -279,9 +299,9 @@
     border-radius: 0 0 5px 5px;
 }
 
-.bm-tooltip-unit {
+.bm-unit {
     font-size: 80%;
-    color: var(--nice);
+    color: #999999;
 }
 
 /* Overrides bootstrap */
