--- a/general_website/templates/general_website/layout/nav_top.html
+++ b/general_website/templates/general_website/layout/nav_top.html
@@ -27,9 +27,9 @@
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'tears' %}">{% translate "Meme" %}</a>
                 </li> -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'talent_trees' %}">{% translate "Dragonflight: Talent trees" %}</a>
-                </li>
+                </li> -->
             </ul>
 
 
